# g5ht-pipeline

./: .gitignore  NOTES.md  README.md  README_OLD.md  apply_channel_alignment.py  automate_orient.ipynb  batch_pipeline_stage1.py  batch_pipeline_stage2.py  beads_test.ipynb  benchmark.py  benchmark_utils.py  bleach_correct.py  check_status.py  cluster_data.ipynb  coding_directions.ipynb  datasets.txt  diffusion.py  diffusion_v3.py  dmd_analysis.py  drift_estimation.py  environment.yml  g5ht.code-workspace  get_channel_alignment.py  grant_plots.ipynb  grid_analysis.py  label_eval.ipynb  latency_analysis.ipynb  latency_analysis.py  latency_analysis_v2.ipynb  median_channel_alignment.py  mip.py  mip.sh  mip_video.ipynb  nd2_to_tiff.ipynb  nir.ipynb  nir_segment.py  nir_utils.py  nose_annotator.py  orient.py  orient_v2.py  (+50 more)
antsun/: ANTSUN_v2.2.1.ipynb  extract_h5_info.ipynb  my_ANTSUN_v2.2.1.ipynb  sync.py
diffusion/: 1d_diffusion_fit.ipynb  diffusion_v2.py
elx_files/: template.txt  template_3d.txt
extract-behavior/: read_data_dict.ipynb  spline.ipynb  spline_051824_eft100_patch_worm002.jl  spline_051824_eft100_patch_worm003.jl  spline_2023-05-26-08.jl  test.jl
logs/: TransformParameters.0.txt  TransformParameters.1.txt
mip/: batch_all_mip.sh  mip.py  mip.sh
nir/: BehaviorDataNIR-sync.ipynb  NIR_behavioral_pipeline.jl.ipynb  NIR_behavioral_pipeline_guide.ipynb  NIR_complete_pipeline.ipynb  README.md  USAGE_GUIDE.md  Untitled.ipynb  nir_utils.jl  read_data_dict.ipynb  spline.ipynb  sync_and_export.py  sync_example.ipynb  sync_nir_confocal.py  (+1 more)
segment/: eval.py  (+21 more)
(+37 files in other folders)
