[project]
name = "g5ht-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "h5py>=3.16.0",
    "hdf5plugin>=6.0.0",
    "imageio>=2.37.3",
    "imageio-ffmpeg>=0.6.0",
    "ipykernel>=7.2.0",
    "itk-elastix>=0.25.1",
    "joblib>=1.5.3",
    "matplotlib>=3.10.8",
    "nd2reader>=3.3.1",
    "numpy>=2.4.3",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.1",
    "pillow>=12.1.1",
    "scikit-image>=0.26.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "segmentation-models-pytorch>=0.5.0",
    "tensorboard>=2.20.0",
    "tifffile>=2026.3.3",
    "timm>=1.0.25",
    "torch>=2.5.1",
    "torchaudio>=2.5.1",
    "torchvision>=0.20.1",
    "tqdm>=4.67.3",
    "ipympl>=0.9.0",
    "ipywidgets>=8.0.0",
]

[[tool.uv.index]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-gpu" }
torchvision = { index = "pytorch-gpu" }
torchaudio = { index = "pytorch-gpu" }
